--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -52,6 +52,8 @@
 \usepackage[none]{hyphenat}
 \usepackage{commath}
 
+\allowdisplaybreaks
+
 
 \def\buildDir{../build}
 \def\resourceDir{../resources}
