Harvard - Ordinary Differential Equations upto systems

--- a/tex/Algebra/LinearAlgebraOfPolynomials.tex
+++ b/tex/Algebra/LinearAlgebraOfPolynomials.tex
@@ -2,12 +2,13 @@
 
 \date{\vspace{-6ex}}
 
-\graphicspath{ {./\resourceDir/img/LinearAlgebraOfPolynomials_images/} }
+
 
 \begin{document}
 
 \searchableSubsection{Linear Algebra of Polynomials}{linear algebra, polynomials}{
 	\bigskip\bigskip
+	\newcommand\imgDir{\resourceDir/img/LinearAlgebraOfPolynomials_images}
 	
 	\subsubsection{Uniqueness of Polynomials}
 	\bigskip
@@ -70,7 +71,7 @@
 	\end{par}
 	
 	\begin{center}
-	\includegraphics[width=\linewidth]{figure_0.png}
+	\includegraphics[width=\linewidth]{\imgDir/figure_0.png}
 	\end{center}
 	
 	
@@ -112,7 +113,7 @@
 	
 	
 	\begin{center}
-	\includegraphics[width=\linewidth]{figure_1.png}
+	\includegraphics[width=\linewidth]{\imgDir/figure_1.png}
 	\end{center}
 	
 	
@@ -144,7 +145,7 @@
 	
 	
 	\begin{center}
-	\includegraphics[width=\linewidth]{figure_2.png}
+	\includegraphics[width=\linewidth]{\imgDir/figure_2.png}
 	\end{center}
 	
 	
@@ -176,7 +177,7 @@
 	
 	
 	\begin{center}
-	\includegraphics[width=\linewidth]{figure_3.png}
+	\includegraphics[width=\linewidth]{\imgDir/figure_3.png}
 	\end{center}
 	
 	
@@ -196,7 +197,7 @@
 	
 	
 	\begin{center}
-	\includegraphics[width=\linewidth]{figure_4.png}
+	\includegraphics[width=\linewidth]{\imgDir/figure_4.png}
 	\end{center}
 
 	\bigskip\bigskip
