--- a/tex/Calculus/The Number e.tex
+++ b/tex/Calculus/The Number e.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\searchableSubsection{The Number e}{analysis}{
+\searchableSection{The Number e}{analysis}{
 	\bigskip\bigskip
 	\boxeddefinition{The \textbf{natural logarithm} is defined as,
 		\[ \ln{x} = \int_1^x \frac{1}{t} \dif t. \]
