--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -16,7 +16,7 @@
 	\searchableChapter{Algebra}{abstract algebra, complex numbers}\biggerskip
 	\subfile{"\algebraDir/Group Theory"}
 	\newpage	
-	%\subfile{"\algebraDir/Matrices"}
+	\subfile{"\algebraDir/Matrices"}
 	\pagebreak
 	\subfile{"\algebraDir/LinearAlgebraOfPolynomials"}
 	\newpage	
@@ -29,6 +29,8 @@
 	
 	\newpage
 	\chapter{Calculus}\biggerskip
+	\subfile{"\calculusDir/Taylor Series"}
+	\newpage
 	\subfile{"\calculusDir/The Number e"}
 	\newpage
 	\subfile{"\calculusDir/Differentiation"}
@@ -36,6 +38,4 @@
 	\subfile{"\calculusDir/Integration"}
 	\newpage
 	\subfile{"\calculusDir/Difference Equations and Differential Equations"}
-	\newpage
-	\subfile{"\calculusDir/Taylor Series"}
 \end{document}
