--- a/tex/Calculus/Taylor Series.tex
+++ b/tex/Calculus/Taylor Series.tex
@@ -4,16 +4,16 @@
 \date{\vspace{-6ex}}
 
 \begin{document}
-\chapter*{Taylor Series}
+\section{Taylor Series}
 
-\section*{Derivation of Taylor's Theorem}
+\subsection*{Derivation of Taylor's Theorem}
 \bigskip
 
-	\subsection*{Rolle's Theorem}
+	\subsubsection*{Rolle's Theorem}
 	Taken from \url{https://en.wikipedia.org/wiki/Rolle%27s_theorem#Standard_version_of_the_theorem}\\\\
 	If a real-valued function $f$ is continuous on a closed interval $[a, b]$ and differentiable on the open interval $(a, b)$ and $f(a) = f(b)$, then there exists at least one $c \in (a, b)$ such that $f'(c) = 0$.
 	
-	\subsection*{Mean Value Theorem}
+	\subsubsection*{Mean Value Theorem}
 	Based on \url{https://en.wikipedia.org/wiki/Mean_value_theorem#Proof} \\\\
 	If a real-valued function $f$ is continuous on a closed interval $[a, b]$ and differentiable on the open interval $(a, b)$ and $f(a) \neq f(b)$, then we can define a number $M \in \mathbb{R}$ such that,
 	\[f(b) = f(a) + M(b-a)\]
@@ -25,7 +25,7 @@
 	\therefore f(b) &= f(a) + f'(c)(b - a) \text{ for some } c \in (a, b) \\
 	\end{align*}
 	
-	\subsection*{Taylor's Theorem}
+	\subsubsection*{Taylor's Theorem}
 	Taken from \textit{Walter Rudin, Principles of Mathematical Analysis}.\\\\
 	Suppose $f$ is a real-valued function on $[a, b]$, $n$, is a positive integer, $f^(n-1)$ is continuous on $[a, b]$, $f^(n)$ exists for every $t \in (a, b)$. Let $\alpha, \beta$ be distinct points of [a, b], and define
 	\[ P(t) = \sum_{k = 0}^{n - 1}\frac{f^{(k)}(\alpha)}{k!}(t - \alpha)^k. \]
@@ -39,7 +39,7 @@
 	&= f(\alpha) + f'(x)(\beta - \alpha) \\
 	\end{align*}
 	
-		\subsubsection*{Proof}
+		\subsubsubsection*{Proof}
 		Let M be the number defined by 
 			\[ f(\beta) = P(\beta) + M(\beta - \alpha)^n \]
 		and put
@@ -51,10 +51,10 @@
 		Our choice of M shows that $g(\beta) = 0$, so that $g'(x_1) = 0$ for some $x_1 \in (\alpha, \beta)$ by the Mean Value Theorem. Since $g'(\alpha) = 0$ we conclude similarly that $g''(x_2) = 0$ for some $x_2 \in (\alpha, \beta)$. After n steps we arrive at the conclusion that $g^{(n)}(x_n) = 0$ for some $x_n \in (\alpha, x_{n-1})$, that is, between $\alpha$ and $\beta$.
 
 \bigskip		
-\section*{Examples of Taylor Series}
+\subsection*{Examples of Taylor Series}
 \bigskip
 
-	\subsection*{$\cos{x} \text{ for x close to }0$}
+	\subsubsubsection*{$\cos{x} \text{ for x close to }0$}
 	Note: Taylor series at zero are also called Maclaurin series.
 	\begin{align*}
 	\cos{x} &= \cos{0} + (-\sin{0})x + \frac{(-\cos{0})}{2!}x^2 + \ldots \\
@@ -62,7 +62,7 @@
 	\end{align*}
 	
 	
-	\subsection*{$\cos{2h} \text{ for h close to }0$}
+	\subsubsubsection*{$\cos{2h} \text{ for h close to }0$}
 	
 	\begin{align*}
 	\cos{2h} \approx 1 - \frac{(2h)^2}{2} = 1 - 2h^2
@@ -76,6 +76,6 @@
 	
 
 \bigskip		
-\section*{Finite Maclaurin Series and the Binomial Theorem}
+\subsection*{Finite Maclaurin Series and the Binomial Theorem}
 \bigskip
 \end{document}
